# airflow_datapipeline

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_1.txt
ci/stable/: cloudbuild.yaml  deployment.yaml
dag/: api_to_postgres_dag.py  demo_retry_alert.py  line_notify.py  test_dag.py  upload_data_to_postgres.py
src/: .gitignore  constant.py  definitions.py  init_func.py  watch_mongo.py
src/01_Airflow Document/: DB Connection.md
src/02_TestCode/: Groupby.py  test_upsert.py
src/Airflow Project/: Project_airflow_dt.py  collect_domains.py  collect_health_notes.py  collect_health_records.py  collect_user_0.py  collect_users.py  collects_health-analytics.py  conditions-profile.py  demo_retry_alert.py  dt_latest.py  etl.py  etl_elastic_health-notes.py  etl_elastic_user.py  etl_followup.py  etl_step.py  evaluation.py  get-user.py  health-analytics-daily.py  mongo_conn_domains.py  mongo_conn_users.py  mongo_health_record.py  mongo_health_record2.py  mongo_read_hivesmart.py  mongo_read_users.py  notifications_log.py  read_postgres_db.py  test_dag.py
src/func/: analytic_task.py  cal.py  common_func.py  database_connect.py  database_post_connect.py  email_service.py  health_indicator.py  health_validate.py  http_service.py  init_func.py  outlier_detection.py  utils.py
src/settings/: configuration.py  dev.ini  prod.ini
