[tool.poetry]
name = "zg-analytics-engine-python"
version = "0.1.0"
description = ""
authors = ["ThawareeSuk <thawaree.sukkasem@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
python-dateutil = "^2.8.1"
pandas = "^1.2.3"
numpy = ">=1.20.3,<2.0.0"
pymongo = "^3.11.3"
pendulum = ">1.8.2"
seaborn = "^0.11.1"
stumpy = "^1.8.0"
matrixprofile = "^1.1.10"
pandas-profiling = {url = "https://github.com/pandas-profiling/pandas-profiling/archive/master.zip"}
PyYAML = "^5.4.1"
tqdm = "^4.60.0"
visions = "^0.7.1"
pydantic = "^1.8.2"
joblib = "^1.0.1"
ImageHash = "^4.2.0"
missingno = "^0.4.2"
phik = "^0.11.2"
htmlmin = "^0.1.12"
Jinja2 = "2.11"
schema = "^0.7.4"
marshmallow = "^3.12.1"
scikit-learn = "^0.24.2"
requests = "^2.26.0"
fpdf = "^1.7.2"
PyDrive = "^1.3.1"
pytz = "^2021.1"
psutil = "^5.8.0"
lxml = "^4.6.3"
geopandas = "^0.9.0"
dataframe-image = "^0.1.1"
elasticsearch = "^7.17.0"
robotframework = "^5.0.1"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
Flask = "*"
redis = "^4.3.4"
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.1"
ipykernel = "^5.5.3"
plotly = "^4.14.3"
plotly-express = "^0.4.1"
nbformat = "^5.1.3"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
